# Employee_Monitoring_Alert_App

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
core/: config.py  container.py  database.py  event_handlers.py  logger.py  model.py  pipeline.py  state_manager.py  worker.py
events/: base_event.py  behavior_result_event.py  drowsiness_event.py  event_bus.py  face_recog_event.py  face_recog_result_event.py  hand_in_face_event.py  person_disappeared_event.py
features/: face_analysis_feature.py  hand_in_face_feature.py  person_analysis_feature.py
features/behavior/: base_behavior.py  drinking_validate.py  eating_validate.py  smoking_validate.py
features/face/: demographics_feature.py  direction_feature.py  drowsiness_feature.py  dwelltime_feature.py  yawning_feature.py
inference/: base_model.py  insightface_model.py  qwen2_vl_model.py  qwen3_vl_model.py  vit_transformer_model.py  yolo_model.py
inference/mediapipe/: base_mediapipe.py  face_detect.py  face_mesh.py  hand_mesh.py
input/: base_camera.py  rtsp_camera.py  webcam_camera.py
migrations/: 001_init_schema.py
output/: display.py
preprocessing/: crop.py  resize.py
repository/: data_store.py  tx.py
repository/device/: device.py
repository/person/: bbox.py  behavior.py  drowsiness.py  dwelltime.py  face_recog.py  person.py
tracking/: base_tracker.py  costum_tracker.py
utils/: fps_counter.py  image_utils.py  tensor_utils.py
